@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.2-dev10";
+$GameVersionString = "p.2-dev11";
 
 //------------------------------------------------------------------------------
 
