@@ -1,6 +1,13 @@
 What's new?
 ===========
 
+Prototype 2-dev11
+-----------------
+
+- Move grenade overcharge into seperate armor-draining
+  ability to fire B.O.U.N.C.E. (Burst Of Usomething 
+  eNgaging Close Enemies).
+
 Prototype 2-dev10
 -----------------
 
